test/Programs/ValidTests/eqDataAndCons/eqDataAndCons.fst
data T = C

main : T
main = case C of { C -> C }
