test/Programs/InvalidTests/dupCases/dupCases.fst
data D = E

f : Bool
f =
  case D of {
    E -> True,
    E -> False
  }
